--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
     "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react-moment": "^0.7.0",
     "validator": "^10.0.0"
   }
 }
